--- a/source/_posts/申请一年野卡域名证书.md
+++ b/source/_posts/申请一年野卡域名证书.md
@@ -2,6 +2,7 @@
 title: 申请一年野卡域名证书
 date: 2022-04-22 14:24:23
 tags: [SSL]
+categories: 技术分享
 ---
 ![关于申请域名证书这件小事](https://tva1.sinaimg.cn/large/a15b4afegy1fmvjgbajynj21hc0u07du.jpg)
 
