--- a/source/_posts/重庆-因为一个人-记住一座城.md
+++ b/source/_posts/重庆-因为一个人-记住一座城.md
@@ -32,7 +32,7 @@ Day2:Begin
 ![Night](重庆-因为一个人-记住一座城/night.jpg)
 Night
 ----------
-在桥底上来之后打了两辆车到了一条路边有几家摆摊的地方，本意是想要到一家特色烧烤的连锁店吃串串的，但是好像大家都不是很想吃串串，就点了一人一碗在重庆吃的最多的东西”冰汤圆”。然后找了一家看起来应该很好吃的烧烤档坐下喝酒吃烧烤。也是在这间烧烤档你给我留下了最深的影像，不知道是不是因为坐在你对面的是我，所以你总是看着我，看着我时也总是带着你那很愉悦的看起来很甜美的微笑，你的笑容大概就是我这次旅行的最大收获了，谢谢你，陈小姐。酒后当然也就各自散去了，虽然第二天还要敢早上八点的飞机，但也还是喝的差点就不省人事了。
+在桥底上来之后打了两辆车到了一条路边有几家摆摊的地方，本意是想要到一家特色烧烤的连锁店吃串串的，但是好像大家都不是很想吃串串，就点了一人一碗在重庆吃的最多的东西”冰汤圆”。然后找了一家看起来应该很好吃的烧烤档坐下喝酒吃烧烤。也是在这间烧烤档你给我留下了最深的影像，不知道是不是因为坐在你对面的是我，所以你总是看着我，看着我时也总是带着你那很愉悦的看起来很甜美的微笑，你的笑容大概就是我这次旅行的最大收获了，谢谢你，陈小姐。酒后当然也就各自散去了，虽然第二天还要赶早上八点的飞机，但也还是喝的差点就不省人事了。
 
 ![sunraise](重庆-因为一个人-记住一座城/sunraise.jpg)
 Traval:END
