--- a/source/_posts/重庆-因为一个人-记住一座城.md
+++ b/source/_posts/重庆-因为一个人-记住一座城.md
@@ -15,7 +15,7 @@ Slowly
 --------
 当天我们预约的位置需要在九点半之前到，否则位置就要被取消，所以我们赶在九点钟就到了现场，一开始等人齐还没有喝酒，正式开始喝的话应该是要从十点钟算起，喝了一个小时，还没看到你人来，我开始担心了：她该不会放我们鸽子了吧？所幸大概是十一点半左右，你终于来了，我着急的心终于放了下来，虽然你的长相很普通，但是你的笑容很甜，当时的我还没有这么想，现在想起来也只能回味了。
 
-Something
+Intro
 ------------
 或许是因为只有我坐在你旁边，而且酒吧的音响很大声，所以你只能找我说话，你向我把周围所有人都稍微打听了一遍，然后向每个人都敬了一杯酒。我感到意外，这就是重庆人打招呼的方式吗。  
 你问我多大，我说我00的，你说你也是，但我一眼就看出来了你不是，后面你也坦诚了其实你是99的。  
