--- a/source/_posts/雨天.md
+++ b/source/_posts/雨天.md
@@ -12,4 +12,11 @@ categories: 生活日记
 睡醒的时候 雨还在下 听起来很悲伤
 
 ### 2022年5月13日 天气 阴天转特大暴雨
-下午一点到了常去的咖啡馆 当时还没下雨 下午3点开始下大雨了
+下午一点到了常去的咖啡馆 当时还没下雨 下午3点开始下大雨了  
+晚上7点准备回家了 但是外面雨还是很大 那就再等一等吧 结果  
+八点了 雨势并没有减小 那就冒着大雨撑伞回家吧 不出意料  
+当我到家的时候 我的宽松牛仔裤已经湿了一小半 QwQ
+
+### 2022年5月14日 天气 阴天偶尔小雨
+今天已经没有下雨了 也就只有偶尔会下那么几分钟的小雨  
+今天出门比较晚 下午3点钟才到咖啡室 也不知道是什么偷走了我的时间
