--- a/source/_posts/雨天.md
+++ b/source/_posts/雨天.md
@@ -20,3 +20,5 @@ categories: 生活日记
 ### 2022年5月14日 天气 阴天偶尔小雨
 今天已经没有下雨了 也就只有偶尔会下那么几分钟的小雨  
 今天出门比较晚 下午3点钟才到咖啡室 也不知道是什么偷走了我的时间
+7点了 还是没有下雨 也是时候回家了
+![](雨天/IMG_1811_jpg.JPG)
