--- a/themes/amazing/languages/zh-CN.yml
+++ b/themes/amazing/languages/zh-CN.yml
@@ -71,7 +71,7 @@ plugin:
       policy: Cookie政策
     visit: '%s次访问'
     visitor: '共%s个访客'
-    footer_visitor: '❤️感谢 <strong>%s</strong> 位小伙伴的 <strong>%s</strong> 次光临！❤️'
+    footer_visitor: '❤️感谢 <strong>%s</strong> 小伙伴的 <strong>%s</strong> 次光临！❤️'
     footer_website_time: '❤️本站自 <strong>|</strong> 已运行 <strong>|</strong> 天 <strong>|</strong> 小时 <strong>|</strong> 分 <strong>|</strong> 秒！❤️'
 search:
     search: '搜索'
