--- a/source/_posts/闷热的天气.md
+++ b/source/_posts/闷热的天气.md
@@ -5,7 +5,7 @@ tags: [生活]
 categories: 生活日记
 thumbnail:
 ---
-![](闷热的天气/DSCF0494.jpg)
+![hotday](闷热的天气/DSCF0494.jpg)
 <!-- more -->
 ### 序言
 转眼间已经快要六月了  
@@ -26,13 +26,13 @@ thumbnail:
 体验到了非常贴切的服务  
 这跟之前的类似gaga、maan..都完全不同  
 也可能是店里没什么客人的缘故吧  
-![](闷热的天气/DSCF0493.jpg)
+![coffee](闷热的天气/DSCF0493.jpg)
 
 因为早上着急出门没吃早餐 现在时间也已经是中午的饭店了  
 附近也找不到其他吃饭的地方  
 一杯荔枝气泡美式和一份牛角包就成了我的午餐  
 
-![](闷热的天气/IMG_2078%201.jpg)
+![somefood](闷热的天气/IMG_20781.jpg)
 
 ### TODO
 虽然今天科目一考试没过  
