--- a/source/_posts/讨厌下雨天.md
+++ b/source/_posts/讨厌下雨天.md
@@ -5,5 +5,6 @@ tags: [生活]
 categories: 生活日记
 thumbnail:
 ---
+![](讨厌下雨天/E72DBEFC-F7D1-44FD-B9BE-25C269E64420-29756-000010CA92F1D608.JPG)
 <!-- more -->
 下雨天有种魔力，总是伴随着坏心情的到来，几天的不懈努力把99%的问题都已经解决了，然而后天就要开始考科目一了，复习时间还有一个晚上和明天一天的时间，为了不再挂科接下来的时间都留给复习科目一吧，再挂科可就丢脸了。昨天和今天都是高考的日子，微博热搜还有朋友圈对于高考挂满了各种祝福、抱怨、祈愿，这是一种很好的状态，或许高考是一个人生命中必须要经历的一部分，虽然我没上过高中，从前也多次幻想过，如果自己当初坚持一点，上个普通高中考个野鸡大学，现在的自己会是什么样子，或许今天才刚出来实习，或许在高考时连个野鸡大学都考不上，或许经历高中复读重考，又或是像我厉害的姐姐一样考上本科大学考个研究生。这些都是我幻想过的，是我没有办法去经历的，如今的我已经是在社会上奔波了5年的被大多数人不抱有希望欠了一身债务的打工人，这是我在大多数人（亲戚、同学）眼里的刻板影像。可他们不知道的是如今的我过的很好，有自己的事业，坚持着自己的兴趣，努力的活着，对生活抱有希望。今天这场雨下了很久，我撑着伞到咖啡馆的时候鞋子已经湿了一半，身上的背包表面也已经被淋湿了，仿佛是老天爷再告诉我：人生不如意十有八九，不要灰心，坚持做自己。
