--- a/source/_posts/龟兔赛跑.md
+++ b/source/_posts/龟兔赛跑.md
@@ -8,7 +8,7 @@ thumbnail:
 <!-- more -->
 果然 人不能太自满  
 只因为得到了一点小小的成就  
-就以为自己很厉害  
+就以为自己很厉害 尝试放慢脚步  
 跑在后面的乌龟先生现如今已经超过了我  
 并且他的努力是肉眼可见的  
 他得到的所有东西也都是他的努力换来的
