--- a/source/_posts/八月倒霉蛋.md
+++ b/source/_posts/八月倒霉蛋.md
@@ -16,4 +16,26 @@ thumbnail:
 而是在过程中让我体会那种紧张感  
 在这之前也想过很多次要改这个毛病  
 但一次次的教训也没有让我得到改正  
-下次一定要改 [奋斗emoji]
+下次一定要改 [奋斗emoji]  
+中间的小插曲：  
+在距离发车前20分钟我在高铁站附近800米的地方堵了13分钟  
+下车时已是距离发车剩余7分钟  
+司机对我说：可以赶上的 跑快点就行了  
+不知道他这么说的时候心理会不会内疚  
+反正我的差评是已经给出去了  
+第二个小插曲：  
+在进不去高铁站之后在人工窗口被告知无法退票、改签  
+沮丧的离开高铁站准备打车到咖啡馆  
+但是一连几个司机像是s了马似的  
+第一个司机：听到是附近的地点 拒绝让我乘车  
+第二个司机：很和善 但是也没有让我乘车的意思  
+第三个司机：像个哑巴 没有理会我
+然后安保小哥在一旁看不下去了，他说：  
+“你打的士应该是你选择地点 而不是让他们去选择乘客。“  
+我觉得他说的没错，但我还是摇了摇头说：
+“既然他不愿意去，那我也不能强求，还是算了吧。”  
+最后我到了附近的公交站台打了网约车顺利的到了目的地  
+这也映射了我对爱情的观点  
+我觉得她很好，但是她觉得我不好，所以我放弃了  
+因为我向来都是尊重他人的意见，不会强迫他人做某事  
+这是优点 也是缺点 
