--- a/source/_posts/清晨.md
+++ b/source/_posts/清晨.md
@@ -7,6 +7,7 @@ thumbnail:
 ---
 ![](清晨/IMG_2062.jpg)
 ![](清晨/background.jpg)
+![1](清晨/videoplayback.mp4)
 <!-- more -->
 5月28日 天气多云  
 今天早上6点28分就醒了  
